--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
   <main class="wrapper">
 
     <h2 class="subheader">Shipping info</h2>
-
+<p> On this page, we demonstrated that we can take input of the data and output the inputted values with their respective
+key values(which here are the labels such as first name). this process makes the retrieving of the data easier and more
+efficient. Additionally, we title-cased the inputted data by using the if condition. to achieve this goal we dep[ended
+on the key and value when certain key were met we were able to select their specific value and change their fit chr of
+each word by leveraging the map method, .slice, .split, .join. To see how this page works, input the required data and hit "submit". And to get back to the intial page press "clear". </p>
     <div id="output">
     <form method="get" action="" class="main-form">
       <div>
